<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format ="3">
  <name>multi_amr_layer</name>
  <version>0.0.0</version>
  <description>TODO: add description</description>
  <maintainer email="sofia.semianchuk@logivations.com">Sofia Semianchuk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav2_common</build_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <export>
    <costmap_2d plugin="${prefix}/multi_amr_costmap_layer.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
